--- a/Be Music Player.CSharp.csproj
+++ b/Be Music Player.CSharp.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Full v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.3.4f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -78,8 +80,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\DrawBMSGraph.cs" />
-    <Compile Include="Assets\GraphBarTooltip.cs" />
+    <Compile Include="Assets\Scripts\BMSLoader.cs" />
     <Compile Include="Assets\Scripts\BmsParser\BGA.cs" />
     <Compile Include="Assets\Scripts\BmsParser\BGAEvent.cs" />
     <Compile Include="Assets\Scripts\BmsParser\BGAHeader.cs" />
@@ -87,7 +88,6 @@
     <Compile Include="Assets\Scripts\BmsParser\BMSInfo.cs" />
     <Compile Include="Assets\Scripts\BmsParser\BMSParser.cs" />
     <Compile Include="Assets\Scripts\BmsParser\BMSUtil.cs" />
-    <Compile Include="Assets\Scripts\BmsParser\BarLine.cs" />
     <Compile Include="Assets\Scripts\BmsParser\BmsEvent.cs" />
     <Compile Include="Assets\Scripts\BmsParser\BpmEvent.cs" />
     <Compile Include="Assets\Scripts\BmsParser\BpmHeader.cs" />
@@ -98,7 +98,9 @@
     <Compile Include="Assets\Scripts\BmsParser\SoundHeader.cs" />
     <Compile Include="Assets\Scripts\BmsParser\StopEvent.cs" />
     <Compile Include="Assets\Scripts\BmsParser\StopHeader.cs" />
+    <Compile Include="Assets\Scripts\DrawBMSGraph.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
+    <Compile Include="Assets\Scripts\GraphBarTooltip.cs" />
     <Compile Include="Assets\Scripts\GstUnityBridge\EventProcessor.cs" />
     <Compile Include="Assets\Scripts\GstUnityBridge\GStreamer.cs" />
     <Compile Include="Assets\Scripts\GstUnityBridge\GstUnityBridgeCapture.cs" />
@@ -107,6 +109,7 @@
     <Compile Include="Assets\Scripts\LoadBMS.cs" />
     <Compile Include="Assets\Scripts\MixLevels.cs" />
     <Compile Include="Assets\Scripts\NotePlayer.cs" />
+    <Compile Include="Assets\Scripts\Util.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Fonts\JudgeNumberFont.fnt" />
